--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -749,11 +749,31 @@
             gap: 30px;
         }
 
-        .comparison-card {
+        .comparison-column {
             background: rgba(0, 0, 0, 0.2);
             border-radius: 15px;
             padding: 25px;
+        }
+
+        .comparison-column h3 {
+            font-size: 1.8rem;
             text-align: center;
+            margin-bottom: 20px;
+            color: var(--text-primary);
+        }
+
+        .comparison-card {
+            background: var(--glass-bg);
+            border-radius: 12px;
+            padding: 20px;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .comparison-card h4 {
+            font-size: 1.4rem;
+            color: var(--text-primary);
+            margin-bottom: 15px;
         }
 
         .comparison-value {
@@ -781,12 +801,6 @@
             font-size: 1.8rem;
             color: var(--text-secondary);
             margin: 0 15px;
-        }
-
-        .comparison-label {
-            font-size: 1.4rem;
-            color: var(--text-primary);
-            margin-bottom: 10px;
         }
 
         .comparison-details {
@@ -1092,68 +1106,75 @@
             const h2hAnalysis = document.querySelector('.h2h-analysis');
 
             const overComparisonContainer = document.createElement('div');
-            overComparisonContainer.className = 'metrics-container';
+            overComparisonContainer.className = 'comparison-container'; // Nova classe para o container
             overComparisonContainer.innerHTML = `
-                <div class="section-title" style="margin-top: 40px;">Comparativo Over (Casa vs Fora)</div>
-                <div class="metrics-container">
-                    <div class="metrics-column">
-                        <h3>Half Time (HT) - Casa vs Fora</h3>
-                        <div class="stats-grid">
-                            <div class="h2h-stat-card">
-                                <h4>Over 0.5 HT</h4>
-                                <div class="h2h-stat-value">
-                                    ${stats.home.total > 0 ? ((stats.home.over0_5HT / stats.home.total) * 100).toFixed(1) : 0}% vs ${stats.away.total > 0 ? ((stats.away.over0_5HT / stats.away.total) * 100).toFixed(1) : 0}%
-                                </div>
-                                <p>${playerAName} (${stats.home.over0_5HT}/${stats.home.total}) vs ${playerBName} (${stats.away.over0_5HT}/${stats.away.total})</p>
-                            </div>
-                            <div class="h2h-stat-card">
-                                <h4>Over 1.5 HT</h4>
-                                <div class="h2h-stat-value">
-                                    ${stats.home.total > 0 ? ((stats.home.over1_5HT / stats.home.total) * 100).toFixed(1) : 0}% vs ${stats.away.total > 0 ? ((stats.away.over1_5HT / stats.away.total) * 100).toFixed(1) : 0}%
-                                </div>
-                                <p>${playerAName} (${stats.home.over1_5HT}/${stats.home.total}) vs ${playerBName} (${stats.away.over1_5HT}/${stats.away.total})</p>
-                            </div>
-                            <div class="h2h-stat-card">
-                                <h4>Over 2.5 HT</h4>
-                                <div class="h2h-stat-value">
-                                    ${stats.home.total > 0 ? ((stats.home.over2_5HT / stats.home.total) * 100).toFixed(1) : 0}% vs ${stats.away.total > 0 ? ((stats.away.over2_5HT / stats.away.total) * 100).toFixed(1) : 0}%
-                                </div>
-                                <p>${playerAName} (${stats.home.over2_5HT}/${stats.home.total}) vs ${playerBName} (${stats.away.over2_5HT}/${stats.away.total})</p>
-                            </div>
-                        </div>
+        <div class="comparison-title">Comparativo Over (Casa vs Fora)</div>
+        <div class="comparison-grid">
+            <div class="comparison-column">
+                <h3>Half Time (HT)</h3>
+                <div class="comparison-card">
+                    <h4>Over 0.5 HT</h4>
+                    <div class="comparison-value">
+                        <span class="comparison-home">${stats.home.total > 0 ? ((stats.home.over0_5HT / stats.home.total) * 100).toFixed(1) : 0}%</span>
+                        <span class="comparison-vs">vs</span>
+                        <span class="comparison-away">${stats.away.total > 0 ? ((stats.away.over0_5HT / stats.away.total) * 100).toFixed(1) : 0}%</span>
                     </div>
-                    <div class="metrics-column">
-                        <h3>Full Time (FT) - Casa vs Fora</h3>
-                        <div class="stats-grid">
-                            <div class="h2h-stat-card">
-                                <h4>Over 0.5 FT</h4>
-                                <div class="h2h-stat-value">
-                                    ${stats.home.total > 0 ? ((stats.home.over0_5FT / stats.home.total) * 100).toFixed(1) : 0}% vs ${stats.away.total > 0 ? ((stats.away.over0_5FT / stats.away.total) * 100).toFixed(1) : 0}%
-                                </div>
-                                <p>${playerAName} (${stats.home.over0_5FT}/${stats.home.total}) vs ${playerBName} (${stats.away.over0_5FT}/${stats.away.total})</p>
-                            </div>
-                            <div class="h2h-stat-card">
-                                <h4>Over 1.5 FT</h4>
-                                <div class="h2h-stat-value">
-                                    ${stats.home.total > 0 ? ((stats.home.over1_5FT / stats.home.total) * 100).toFixed(1) : 0}% vs ${stats.away.total > 0 ? ((stats.away.over1_5FT / stats.away.total) * 100).toFixed(1) : 0}%
-                                </div>
-                                <p>${playerAName} (${stats.home.over1_5FT}/${stats.home.total}) vs ${playerBName} (${stats.away.over1_5FT}/${stats.away.total})</p>
-                            </div>
-                            <div class="h2h-stat-card">
-                                <h4>Over 2.5 FT</h4>
-                                <div class="h2h-stat-value">
-                                    ${stats.home.total > 0 ? ((stats.home.over2_5FT / stats.home.total) * 100).toFixed(1) : 0}% vs ${stats.away.total > 0 ? ((stats.away.over2_5FT / stats.away.total) * 100).toFixed(1) : 0}%
-                                </div>
-                                <p>${playerAName} (${stats.home.over2_5FT}/${stats.home.total}) vs ${playerBName} (${stats.away.over2_5FT}/${stats.away.total})</p>
-                            </div>
-                        </div>
-                    </div>
+                    <p class="comparison-details">${playerAName} (${stats.home.over0_5HT}/${stats.home.total}) vs ${playerBName} (${stats.away.over0_5HT}/${stats.away.total})</p>
                 </div>
-            `;
+                <div class="comparison-card">
+                    <h4>Over 1.5 HT</h4>
+                    <div class="comparison-value">
+                        <span class="comparison-home">${stats.home.total > 0 ? ((stats.home.over1_5HT / stats.home.total) * 100).toFixed(1) : 0}%</span>
+                        <span class="comparison-vs">vs</span>
+                        <span class="comparison-away">${stats.away.total > 0 ? ((stats.away.over1_5HT / stats.away.total) * 100).toFixed(1) : 0}%</span>
+                    </div>
+                    <p class="comparison-details">${playerAName} (${stats.home.over1_5HT}/${stats.home.total}) vs ${playerBName} (${stats.away.over1_5HT}/${stats.away.total})</p>
+                </div>
+                <div class="comparison-card">
+                    <h4>Over 2.5 HT</h4>
+                    <div class="comparison-value">
+                        <span class="comparison-home">${stats.home.total > 0 ? ((stats.home.over2_5HT / stats.home.total) * 100).toFixed(1) : 0}%</span>
+                        <span class="comparison-vs">vs</span>
+                        <span class="comparison-away">${stats.away.total > 0 ? ((stats.away.over2_5HT / stats.away.total) * 100).toFixed(1) : 0}%</span>
+                    </div>
+                    <p class="comparison-details">${playerAName} (${stats.home.over2_5HT}/${stats.home.total}) vs ${playerBName} (${stats.away.over2_5HT}/${stats.away.total})</p>
+                </div>
+            </div>
+            <div class="comparison-column">
+                <h3>Full Time (FT)</h3>
+                <div class="comparison-card">
+                    <h4>Over 0.5 FT</h4>
+                    <div class="comparison-value">
+                        <span class="comparison-home">${stats.home.total > 0 ? ((stats.home.over0_5FT / stats.home.total) * 100).toFixed(1) : 0}%</span>
+                        <span class="comparison-vs">vs</span>
+                        <span class="comparison-away">${stats.away.total > 0 ? ((stats.away.over0_5FT / stats.away.total) * 100).toFixed(1) : 0}%</span>
+                    </div>
+                    <p class="comparison-details">${playerAName} (${stats.home.over0_5FT}/${stats.home.total}) vs ${playerBName} (${stats.away.over0_5FT}/${stats.away.total})</p>
+                </div>
+                <div class="comparison-card">
+                    <h4>Over 1.5 FT</h4>
+                    <div class="comparison-value">
+                        <span class="comparison-home">${stats.home.total > 0 ? ((stats.home.over1_5FT / stats.home.total) * 100).toFixed(1) : 0}%</span>
+                        <span class="comparison-vs">vs</span>
+                        <span class="comparison-away">${stats.away.total > 0 ? ((stats.away.over1_5FT / stats.away.total) * 100).toFixed(1) : 0}%</span>
+                    </div>
+                    <p class="comparison-details">${playerAName} (${stats.home.over1_5FT}/${stats.home.total}) vs ${playerBName} (${stats.away.over1_5FT}/${stats.away.total})</p>
+                </div>
+                <div class="comparison-card">
+                    <h4>Over 2.5 FT</h4>
+                    <div class="comparison-value">
+                        <span class="comparison-home">${stats.home.total > 0 ? ((stats.home.over2_5FT / stats.home.total) * 100).toFixed(1) : 0}%</span>
+                        <span class="comparison-vs">vs</span>
+                        <span class="comparison-away">${stats.away.total > 0 ? ((stats.away.over2_5FT / stats.away.total) * 100).toFixed(1) : 0}%</span>
+                    </div>
+                    <p class="comparison-details">${playerAName} (${stats.home.over2_5FT}/${stats.home.total}) vs ${playerBName} (${stats.away.over2_5FT}/${stats.away.total})</p>
+                </div>
+            </div>
+        </div>
+    `;
 
             h2hAnalysis.appendChild(overComparisonContainer);
         }
-
         function renderPlayerSection(player, playerKey) {
             const container = document.getElementById(playerKey);
             const last10Games = player.stats.games.slice(0, 10);
