--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -724,19 +724,18 @@
             }
         }
 
-        /* Novos estilos para comparação Casa vs Fora */
         .comparison-container {
-            margin-top: 40px;
+            margin: 20px 10px;
             background: var(--glass-bg);
             border-radius: 20px;
-            padding: 40px;
+            padding: clamp(15px, 3vw, 40px);
             border: 1px solid var(--glass-border);
         }
 
         .comparison-title {
-            font-size: 2rem;
+            font-size: clamp(1.2rem, 4vw, 2rem);
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             background: linear-gradient(45deg, var(--accent-purple), var(--accent-pink));
             -webkit-background-clip: text;
             background-clip: text;
@@ -745,34 +744,26 @@
 
         .comparison-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: clamp(15px, 3vw, 30px);
         }
 
         .comparison-column {
             background: rgba(0, 0, 0, 0.2);
             border-radius: 15px;
-            padding: 25px;
+            padding: clamp(15px, 2vw, 25px);
         }
 
         .comparison-column h3 {
-            font-size: 1.8rem;
+            font-size: clamp(1.2rem, 3vw, 1.8rem);
             text-align: center;
-            margin-bottom: 20px;
-            color: var(--text-primary);
+            margin-bottom: 15px;
         }
 
         .comparison-card {
             background: var(--glass-bg);
             border-radius: 12px;
-            padding: 20px;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .comparison-card h4 {
-            font-size: 1.4rem;
-            color: var(--text-primary);
+            padding: clamp(12px, 2vw, 20px);
             margin-bottom: 15px;
         }
 
@@ -780,38 +771,39 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            margin: 15px 0;
+            gap: 10px;
+            flex-wrap: wrap;
+            padding: 5px;
         }
 
         .comparison-home,
         .comparison-away {
-            font-size: 2.5rem;
+            font-size: clamp(1.5rem, 4vw, 2.5rem);
             font-weight: 800;
         }
 
-        .comparison-home {
-            color: var(--accent-purple);
-        }
-
-        .comparison-away {
-            color: var(--accent-pink);
-        }
-
         .comparison-vs {
-            font-size: 1.8rem;
-            color: var(--text-secondary);
-            margin: 0 15px;
+            font-size: clamp(1rem, 3vw, 1.8rem);
         }
 
         .comparison-details {
-            font-size: 1.1rem;
-            color: var(--text-secondary);
-            margin-top: 10px;
+            font-size: clamp(0.85rem, 2vw, 1.1rem);
+            padding: 0 5px;
+            word-break: break-word;
         }
 
-        @media (max-width: 768px) {
-            .comparison-grid {
-                grid-template-columns: 1fr;
+        /* Ajustes adicionais para mobile */
+        @media (max-width: 480px) {
+            .comparison-card h4 {
+                font-size: clamp(1rem, 3vw, 1.4rem);
+            }
+
+            .comparison-value {
+                padding: 10px 5px;
+            }
+
+            .comparison-details {
+                line-height: 1.4;
             }
         }
     </style>
