--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -556,6 +556,42 @@
             transition: all 0.3s ease;
         }
 
+        .game-tooltip {
+            position: absolute;
+            bottom: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.9);
+            padding: 12px;
+            border-radius: 8px;
+            font-size: 0.9rem;
+            color: white;
+            white-space: nowrap;
+            pointer-events: none;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            z-index: 1000;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            border: 1px solid var(--glass-border);
+            backdrop-filter: blur(10px);
+            margin-bottom: 10px;
+        }
+
+        .game-tooltip::after {
+            content: '';
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            border: 6px solid transparent;
+            border-top-color: rgba(0, 0, 0, 0.9);
+        }
+
+        .history-dot:hover .game-tooltip {
+            opacity: 1;
+        }
+
+
         .history-dot::before {
             content: '';
             position: absolute;
@@ -758,6 +794,10 @@
             font-size: clamp(1.2rem, 3vw, 1.8rem);
             text-align: center;
             margin-bottom: 15px;
+            background: linear-gradient(45deg, var(--accent-purple), var(--accent-pink));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
         }
 
         .comparison-card {
@@ -765,6 +805,17 @@
             border-radius: 12px;
             padding: clamp(12px, 2vw, 20px);
             margin-bottom: 15px;
+            text-align: center;
+        }
+
+        .comparison-card h4 {
+            font-size: clamp(1rem, 2.5vw, 1.4rem);
+            background: linear-gradient(45deg, var(--accent-purple), var(--accent-pink));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            margin-bottom: 10px;
+            font-weight: 600;
         }
 
         .comparison-value {
@@ -776,34 +827,65 @@
             padding: 5px;
         }
 
-        .comparison-home,
+        .comparison-home {
+            font-size: clamp(1.5rem, 4vw, 2.5rem);
+            font-weight: 800;
+            background: linear-gradient(45deg, var(--accent-purple), var(--primary-color));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+
         .comparison-away {
             font-size: clamp(1.5rem, 4vw, 2.5rem);
             font-weight: 800;
+            background: linear-gradient(45deg, var(--primary-color), var(--accent-pink));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
         }
 
         .comparison-vs {
             font-size: clamp(1rem, 3vw, 1.8rem);
+            color: var(--text-secondary);
+            margin: 0 10px;
         }
 
         .comparison-details {
             font-size: clamp(0.85rem, 2vw, 1.1rem);
+            color: var(--text-secondary);
+            margin-top: 8px;
             padding: 0 5px;
-            word-break: break-word;
+            line-height: 1.4;
         }
 
         /* Ajustes adicionais para mobile */
-        @media (max-width: 480px) {
-            .comparison-card h4 {
-                font-size: clamp(1rem, 3vw, 1.4rem);
+        @media (max-width: 768px) {
+            .comparison-container {
+                margin: 20px 10px;
+            }
+
+            .comparison-grid {
+                grid-template-columns: 1fr;
             }
 
             .comparison-value {
                 padding: 10px 5px;
             }
+        }
 
-            .comparison-details {
-                line-height: 1.4;
+        @media (max-width: 480px) {
+            .comparison-container {
+                padding: 15px 10px;
+            }
+
+            .comparison-card {
+                padding: 12px 8px;
+            }
+
+            .comparison-value {
+                justify-content: center;
+                gap: 15px;
             }
         }
     </style>
@@ -1166,6 +1248,39 @@
     `;
 
             h2hAnalysis.appendChild(overComparisonContainer);
+        }
+        function generateGameHistory(games, limit) {
+            const recentGames = games.slice(0, limit).reverse();
+            return recentGames.map(game => {
+                const [homeGoals, awayGoals] = game.score.split('-').map(Number);
+                const [homeHT, awayHT] = game.scoreHT.split('-').map(Number);
+                let result;
+                if (homeGoals > awayGoals) {
+                    result = 'home';
+                } else if (awayGoals > homeGoals) {
+                    result = 'away';
+                } else {
+                    result = 'draw';
+                }
+
+                // Formatando a data para exibição
+                const gameDate = new Date(game.date).toLocaleDateString('pt-BR');
+
+                // Criando o conteúdo do tooltip
+                const tooltipContent = `
+            <div>
+                <strong>${game.home}</strong> vs <strong>${game.away}</strong><br>
+                HT: ${game.scoreHT} | FT: ${game.score}<br>
+                Data: ${gameDate}
+            </div>
+        `;
+
+                return `
+            <div class="history-dot ${result}">
+                <div class="game-tooltip">${tooltipContent}</div>
+            </div>
+        `;
+            }).join('');
         }
         function renderPlayerSection(player, playerKey) {
             const container = document.getElementById(playerKey);
